# insta-post-extractor

./: .gitignore  .python-version  .windsurfignore  INSTALL.md  Makefile  README.md  TERRAFORM_MIGRATION_RECAP.md  api_gateway.tf  cloudwatch.tf  lambda.tf  outputs.tf  pyproject.toml  s3.tf  template.yaml  variables.tf
.github/workflows/: deploy.yml
src/functions/: ig_post_extractor.py
terraform/environments/dev/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/modules/api_gateway/: main.tf  outputs.tf  variables.tf
terraform/modules/cloudwatch/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
tests/: env.json  test_ig_post_extractor.py
tests/events/: negative_case.json  positive_case.json
